kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: online-event-booking-haleema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: devops-assignment-2-bookingservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking-haleema
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
