kubernetes/deployment-service-databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
  namespace: online-event-booking-haleema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres-user
          image: postgres:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: online-event-booking-haleema
spec:
  selector:
    app: postgres-user
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
# 🔹 Deployment for postgres-booking
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-booking
  namespace: online-event-booking-haleema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-booking
  template:
    metadata:
      labels:
        app: postgres-booking
    spec:
      containers:
        - name: postgres-booking
          image: postgres:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
---
# 🔹 Service for postgres-booking
apiVersion: v1
kind: Service
metadata:
  name: postgres-booking
  namespace: online-event-booking-haleema
spec:
  selector:
    app: postgres-booking
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
# 🔹 Deployment for MongoDB (mongo-event)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-event
  namespace: online-event-booking-haleema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-event
  template:
    metadata:
      labels:
        app: mongo-event
    spec:
      containers:
        - name: mongo-event
          image: mongo:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
---
# 🔹 Service for MongoDB (mongo-event)
apiVersion: v1
kind: Service
metadata:
  name: mongo-event
  namespace: online-event-booking-haleema
spec:
  selector:
    app: mongo-event
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
