kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking-haleema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: devops-assignment-2-eventservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-haleema
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
