kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: online-event-booking-haleema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: devops-assignment-2-userservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking-haleema
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP

  command to apply this file: 
# kubectl apply -f deployment-service-user.yaml --namespace=online-event-booking-haleema
